# image-rotate-service

./: Dockerfile  README.md  development.Dockerfile  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: image-rotate.yml  workflow.yml
kubernetes/: image-rotate.service.yml  ingress.yml
src/: main.py  my_service.py
